// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Persona > Big variant 1`] = `
<body>
  <div>
    <div
      class="yc-persona yc-persona_size_s yc-persona_theme_clear _persona_961b14 _persona--s_961b14"
    >
      <div
        class="yc-persona__main"
      >
        <div
          class="yc-persona__avatar"
        >
          <img
            alt=""
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg/193px-Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg"
          />
        </div>
        <div
          class="yc-persona__text"
        >
          test text
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="yc-persona yc-persona_size_s yc-persona_theme_clear _persona_961b14 _persona--n_961b14 _persona--disabled_961b14"
    >
      <div
        class="yc-persona__main"
      >
        <div
          class="yc-persona__avatar"
        >
          <img
            alt=""
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg/193px-Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg"
          />
        </div>
        <div
          class="yc-persona__text"
        >
          test text
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="yc-persona yc-persona_size_s yc-persona_theme_clear _persona_961b14 _persona--n_961b14"
    >
      <div
        class="yc-persona__main"
      >
        <div
          class="yc-persona__avatar"
        >
          <img
            alt=""
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg/193px-Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg"
          />
        </div>
        <div
          class="yc-persona__text"
        >
          test text
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Persona > Disable variant 1`] = `
<body>
  <div>
    <div
      class="yc-persona yc-persona_size_s yc-persona_theme_clear _persona_961b14 _persona--s_961b14"
    >
      <div
        class="yc-persona__main"
      >
        <div
          class="yc-persona__avatar"
        >
          <img
            alt=""
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg/193px-Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg"
          />
        </div>
        <div
          class="yc-persona__text"
        >
          test text
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="yc-persona yc-persona_size_s yc-persona_theme_clear _persona_961b14 _persona--n_961b14 _persona--disabled_961b14"
    >
      <div
        class="yc-persona__main"
      >
        <div
          class="yc-persona__avatar"
        >
          <img
            alt=""
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg/193px-Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg"
          />
        </div>
        <div
          class="yc-persona__text"
        >
          test text
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Persona > Small variant 1`] = `
<body>
  <div>
    <div
      class="yc-persona yc-persona_size_s yc-persona_theme_clear _persona_961b14 _persona--s_961b14"
    >
      <div
        class="yc-persona__main"
      >
        <div
          class="yc-persona__avatar"
        >
          <img
            alt=""
            src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg/193px-Charles_Darwin_by_Julia_Margaret_Cameron%2C_c._1868.jpg"
          />
        </div>
        <div
          class="yc-persona__text"
        >
          test text
        </div>
      </div>
    </div>
  </div>
</body>
`;
